# Generated by Django 4.2.1 on 2023-05-14 06:06

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('login', '0003_rename_usuario_persona'),
    ]

    operations = [
        migrations.CreateModel(
            name='Licencia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('A', 'A'), ('B', 'B'), ('F', 'F'), ('A1', 'A1'), ('C', 'C'), ('C1', 'C1'), ('D', 'D'), ('D1', 'D1'), ('E', 'E'), ('E1', 'E1')], max_length=2)),
                ('fecha_de_caducidad', models.DateField()),
                ('es_profesional', models.BooleanField()),
            ],
        ),
        migrations.CreateModel(
            name='Vehiculo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('marca', models.CharField(max_length=50, verbose_name='Marca')),
                ('modelo', models.CharField(max_length=50, verbose_name='Modelo')),
                ('placa', models.CharField(max_length=10, unique=True, verbose_name='Placa')),
                ('anio_de_fabricacion', models.PositiveSmallIntegerField(verbose_name='Año de fabricación')),
                ('color', models.CharField(max_length=50, verbose_name='Color')),
                ('cilindraje', models.FloatField(verbose_name='Cilindraje')),
                ('tonelaje', models.FloatField(verbose_name='Tonelaje')),
                ('unidad_carburaje', models.FloatField(verbose_name='Unidad de carburaje')),
                ('combustible', models.CharField(choices=[('Combustible.GASOLINA', 'Combustible.GASOLINA'), ('Combustible.DIESEL', 'Combustible.DIESEL'), ('Combustible.GAS', 'Combustible.GAS'), ('Combustible.ELECTRICO', 'Combustible.ELECTRICO')], max_length=30, verbose_name='Combustible')),
                ('condicion', models.CharField(choices=[('CondicionVehicular.NUEVO', 'CondicionVehicular.NUEVO'), ('CondicionVehicular.USADO', 'CondicionVehicular.USADO')], max_length=30, verbose_name='Condición vehicular')),
                ('fotografia', models.ImageField(blank=True, null=True, upload_to='vehiculos', verbose_name='Fotografía')),
            ],
        ),
        migrations.CreateModel(
            name='Matricula',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('matricula', models.CharField(max_length=50, unique=True, verbose_name='Matrícula')),
                ('foto', models.ImageField(blank=True, null=True, upload_to='matriculas', verbose_name='Fotografía')),
                ('vehiculo', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='matricula', to='control_vehicular.vehiculo')),
            ],
        ),
        migrations.CreateModel(
            name='Llanta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigo_de_fabricacion', models.CharField(max_length=50, verbose_name='Código de fabricación')),
                ('posicion_respecto_al_vehiculo', models.CharField(choices=[('PosicionLlanta.IZQUIERDA', 'PosicionLlanta.IZQUIERDA'), ('PosicionLlanta.DERECHA', 'PosicionLlanta.DERECHA'), ('PosicionLlanta.DELANTERA', 'PosicionLlanta.DELANTERA'), ('PosicionLlanta.TRASERA', 'PosicionLlanta.TRASERA')], max_length=50, verbose_name='Posición respecto al vehículo')),
                ('vehiculo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='llantas', to='control_vehicular.vehiculo')),
            ],
        ),
        migrations.CreateModel(
            name='Conductor',
            fields=[
                ('persona_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='login.persona')),
                ('licencia', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='control_vehicular.licencia')),
            ],
            bases=('login.persona',),
        ),
    ]
