@startuml clases

skinparam groupInheritance 3
left to right direction

class Empresa {

}

package DatosPersonales {
    class NumeroDeTelefono {
        - numeroDeTelefono: String
    }
    class Correo {
        - email: String
    }
    class Direccion {
        - direccion: String
        - ciudad: String
        - provincia: String
    }
    enum NivelDeEducacion {
        + GeneralBasica
        + Bachillerato
        + Superior
    }
    enum EstadoCivil {
        + SOLTERO
        + CASADO
        + DIVORCIADO
        + UNION_LIBRE
        + VIUDO
    }
}

package DatosVehiculares {
    enum TipoLicencia {
        + A
        + B
        + F
        + A1
        + C
        + C1
        + D
        + D1
        + E
        + E1
    }
    class Licencia {
        - tipo: String
        - permisos: String
        - fechaDeCaducidad: Fecha
        - esProfesional: Boolean
    }
    class Matricula {
        - matricula: String
        - foto: Foto
    }
    enum TipoDeVehículo {
        + CAMIONETA
        + CAMION
        + AUTO
        + TRACTOR
        + FURGONETA
        + BUS
        + TRAILER
        + VOLQUETA
    }
    enum Combustible {
        + GASOLINA
        + DIESEL
    }
    enum CondicionVehicular {
        + OPERABLE
        + NO_OPERABLE
        + EN_MANTENIMIENTO
    }
    enum PosicionLlanta {
        + DERECHO_DELANTERO
        + DERECHO_POSTERIOR
        + DERECHO_POSTERIOR_EXTERIOR
        + DERECHO_POSTERIOR_INTERIOR
        + IZQUIERDO_DELANTERO
        + IZQUIERDO_POSTERIOR
        + IZQUIERDO_POSTERIOR_EXTERIOR
        + IZQUIERDO_POSTERIOR_INTERIOR
        + REPUESTO
    }
    class Llanta {
        - codigoDeFabricacion: String
        - posicionRespectoAlVehiculo: PosicionLlanta
    }
    class Bateria {
        - codigoBateria: String
    }
}

abstract class Trabajador {
    - nombreCompleto: String
    - cedula: String
    - fechaDeNacimiento: Fecha
    - estadoCivil: EstadoCivil
    - instruccion: NivelDeEducacion
    - direccion: Direccion
    - telefono: NumeroDeTelefono
    - correo: Correo
    - foto: Foto
}

class Encargado {

}

class RevisorVehicular {

}

class Conductor {

}

class Propietario {

}

Empresa --> "*" Trabajador: - empleados
Trabajador *--> DatosPersonales
Encargado --|> Trabajador
RevisorVehicular --|> Trabajador
Conductor --|> Trabajador
Propietario --|> Trabajador

Conductor *--> "1" Licencia

class Vehiculo {
    - marca: String
    - modelo: String
    - placa: String
    - añoDeFabricacion: Fecha
    - color: Color
    - cilindraje: float
    - tonelaje: float
    - unidadCarburaje: float
    - combustible: Combustible
    - condicion: CondicionVehicular
    - fotografia: Foto
}

Vehiculo --> "2..*" Llanta: - llantas
Vehiculo --> "1" Matricula: - matricula
Vehiculo --> "1" Propietario: - propietario
Vehiculo --> "1..*" Bateria: - baterias
@enduml